--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@elrondnetwork/dapp-core": "1.0.0",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
-    "axios": "0.21.1",
+    "axios": "^0.27.2",
     "bootstrap": "4.6.0",
     "merge-images": "^2.0.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-aws-s3-typescript": "^1.1.3",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
+    "sal.js": "^0.8.5",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1"
   },
